--- a/react/package.json
+++ b/react/package.json
@@ -41,8 +41,6 @@
     "typescript": "^5.4.5",
     "webpack": "^5.91.0",
     "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^5.0.4",
-    "webpack-pwa-manifest": "^4.3.0",
-    "workbox-webpack-plugin": "^7.1.0"
+    "webpack-dev-server": "^5.0.4"
   }
 }
