--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -47,7 +47,13 @@ jobs:
       run: npm run build --prefix ./react
 
     - name: Remove unused
-      run: rm -r react/node_modules && rm -r .git && rm static/index.html 
+      run: |
+        rm -r react/node_modules
+        rm -r .git
+        rm -r .github
+        rm -r .vscode
+        rm PCB_BOM_Parser_Py.code-workspace
+        rm static/index.html 
 
 
     - uses: ncipollo/release-action@v1
